--- a/about.html
+++ b/about.html
@@ -44,29 +44,20 @@
                 </h1>
             </div>
         </section>
-        <section id = 'boxes'>
+        <section id = 'main'>
             <div class = 'container'>
                 <div class = 'box'>
-                    <img src = 'js-logo.png'>
-                    <h3>HTML MARKUP</h3>
-                    <p> JAVASCRIPT</p>
-                </div>
-                <div class = 'box'>
-                        <img src= 'HTML5_Logo_512.png'>
-                    <h3>HTML MARKUP</h3>
-                    <p> HTML</p>
-                </div>
-                <div class = 'box3'>
-                    <img src= 'css3.png'>
-                    <h3>HTML MARKUP</h3>
-                    <p> CSS</p>
+                    <article id="main-col"> 
+                        <h1></h1>
+
+                    </article>
                 </div>
             </div>
         </section>
 
 
 
-    <div>    
+    <!--div>    
         <h3>About me</h3>
         <p>PUT SOMETHING HERE</p>
     </div>
@@ -77,7 +68,7 @@
             <h4>Contact me</h4>
         </div>
 
-    </div>
+    </div-->
 
     <footer>
         <p>Designed by Vesna Tan, Copyright &copy; 2017 </p>
