--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <img src="/images/ArimosJS.jpg" style="width:100%; padding:20px">
       <p style="padding-left:20px;" > Phaser.io, Webpack, Browsersync, Express, and Sequelize </p>
       <p style="padding-left:20px;" >
-          <a href="#" class="fa fa-youtube"></a> 
+          <a href="https://www.youtube.com/watch?v=RLWiyAFp2mM" class="fa fa-youtube"></a> 
           <a href="https://github.com/VesJon/arimos.js " class="fa fa-github"></a> 
           <a href="https://arimosjs.herokuapp.com"><img style="height: 38px; width:38px;"src="/images/herokuicon.png"></a>
       </p>
