--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
-  <img src="/images/profile.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+  <img src="profile.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
   <h3 class="w3-center"><b>VESNA TAN</b></h3>
   <p>EMAIL: TANVEZI@GMAIL.COM</p>
   <p>TEL: (347) 724-8761</p>
@@ -63,7 +63,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-row">
       <h4 class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32">Things I've helped build</h4>
     <div class="w3-third">
-      <img src="/images/FrankenStyle.jpg" style="width:100%; padding:20px;" >
+      <img src="FrankenStyle.jpg" style="width:100%; padding:20px;" >
       <p style="padding-left:20px;" > 
         React, React-Redux, Chrome extension, and CSS
       </p>
@@ -72,16 +72,16 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </p>
     </div>
     <div class="w3-third">
-      <img src="/images/ArimosJS.jpg" style="width:100%; padding:20px">
+      <img src="ArimosJS.jpg" style="width:100%; padding:20px">
       <p style="padding-left:20px;" > Phaser.io, Webpack, Browsersync, Express, and Sequelize </p>
       <p style="padding-left:20px;" >
           <a href="https://www.youtube.com/watch?v=RLWiyAFp2mM" class="fa fa-youtube"></a> 
           <a href="https://github.com/VesJon/arimos.js " class="fa fa-github"></a> 
-          <a href="https://arimosjs.herokuapp.com"><img style="height: 38px; width:38px;"src="/images/herokuicon.png"></a>
+          <a href="https://arimosjs.herokuapp.com"><img style="height: 38px; width:38px;"src="herokuicon.png"></a>
       </p>
     </div>
     <div class="w3-third">
-        <img src="/images/coming-soon.jpg" style="width:100%; padding:20px;" >
+        <img src="coming-soon.jpg" style="width:100%; padding:20px;" >
         <p style="padding-left:20px;" > 
          coming-soon
         </p>
