--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-  <a href="javascript:void(0)" onclick="close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   <img src="profile.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
   <h3 class="w3-center"><b>VESNA TAN</b></h3>
   <p>EMAIL: TANVEZI@GMAIL.COM</p>
   <p>TEL: (347) 724-8761</p>
-  <a href="#" onclick="close()" class="w3-bar-item w3-button">PORTFOLIO</a>
-  <a href="#about" onclick="close()" class="w3-bar-item w3-button">ABOUT ME</a>
+  <a href="#" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
 </nav>
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-white w3-xlarge w3-padding-16">
   <span class="w3-left w3-padding">VESNA TAN</span>
-  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="open()">☰</a>
+  <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
@@ -119,12 +119,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </div>
 <script>
 // Script to open and close sidebar
-function open() {
+function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
     document.getElementById("myOverlay").style.display = "block";
 }
 
-function close() {
+function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
 }
