feat: updated projects

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </p>
     </div>
     <div class="w3-third">
-        <img src="coming-soon.jpg" style="width:100%; padding:20px;" >
+        <img src="calandar.png" style="width:100%; padding:20px;" >
         <p style="padding-left:20px;" > 
-         coming-soon
+        React, React-Redux, Express, PostgreSQL, Sequelize
         </p>
         <p style="padding-left:20px;" >
-          <a href="#" class="fa fa-youtube"></a> <a href="#" class="fa fa-github"></a> 
+          <a href="https://github.com/Tanvez/spotify-fellowship-calendar" class="fa fa-github"></a> 
+          <a href="https://spotify-calendar-app.herokuapp.com/"><img style="height: 38px; width:38px;"src="herokuicon.png"></a>
         </p>
   </div>
 </div>
